syntax = "proto3";

package accounts;

option go_package = "github.com/example/micro/proto/gen/go/accounts;accountspb";

message Account {
  int64 id = 1;
  string number = 2;
  string bank = 3;
  string bic = 4;
}

message CreateAccountRequest {
  string number = 1;
  string bank = 2;
  string bic = 3;
}
message CreateAccountResponse { Account account = 1; }

message GetAccountRequest { int64 id = 1; }
message GetAccountResponse { Account account = 1; }

message ListAccountsRequest { int32 limit = 1; int32 offset = 2; }
message ListAccountsResponse { repeated Account accounts = 1; }

message UpdateAccountRequest {
  int64 id = 1;
  string number = 2;
  string bank = 3;
  string bic = 4;
}
message UpdateAccountResponse { Account account = 1; }

message DeleteAccountRequest { int64 id = 1; }
message DeleteAccountResponse {}

service AccountsService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse);
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
}
