syntax = "proto3";

package dismissal_order;

option go_package = "github.com/example/micro/proto/gen/go/dismissal_order;dismissalorderpb";

message DismissalOrderHeader {
  int64 id = 1;
  string number = 2;
  string preparation_date = 3; // date
  int64 organization_id = 4;
}

message DismissalOrderBody {
  int64 id = 1;
  int64 dismissal_order_header_id = 2;
  int64 employment_contract_id = 3;
  int64 department_id = 4;
  int64 position_id = 5;
  string dismissal_date = 6; // date
  string dismissal_ground = 7;
  int32 doc_number = 8; // optional
  string doc_date = 9;   // optional (date YYYY-MM-DD)
}

// Header CRUD
message CreateDismissalOrderHeaderRequest {
  string number = 1;
  string preparation_date = 2;
  int64 organization_id = 3;
}
message CreateDismissalOrderHeaderResponse { DismissalOrderHeader header = 1; }

message GetDismissalOrderHeaderRequest { int64 id = 1; }
message GetDismissalOrderHeaderResponse { DismissalOrderHeader header = 1; }

message ListDismissalOrderHeadersRequest { int32 limit = 1; int32 offset = 2; }
message ListDismissalOrderHeadersResponse { repeated DismissalOrderHeader headers = 1; }

message UpdateDismissalOrderHeaderRequest {
  int64 id = 1;
  string number = 2;
  string preparation_date = 3;
  int64 organization_id = 4;
}
message UpdateDismissalOrderHeaderResponse { DismissalOrderHeader header = 1; }

message DeleteDismissalOrderHeaderRequest { int64 id = 1; }
message DeleteDismissalOrderHeaderResponse {}

// Body CRUD
message CreateDismissalOrderBodyRequest {
  int64 dismissal_order_header_id = 1;
  int64 employment_contract_id = 2;
  int64 department_id = 3;
  int64 position_id = 4;
  string dismissal_date = 5;
  string dismissal_ground = 6;
  int32 doc_number = 7;
  string doc_date = 8;
}
message CreateDismissalOrderBodyResponse { DismissalOrderBody body = 1; }

message GetDismissalOrderBodyRequest { int64 id = 1; }
message GetDismissalOrderBodyResponse { DismissalOrderBody body = 1; }

message ListDismissalOrderBodiesRequest { int64 header_id = 1; int32 limit = 2; int32 offset = 3; }
message ListDismissalOrderBodiesResponse { repeated DismissalOrderBody bodies = 1; }

message UpdateDismissalOrderBodyRequest {
  int64 id = 1;
  int64 dismissal_order_header_id = 2;
  int64 employment_contract_id = 3;
  int64 department_id = 4;
  int64 position_id = 5;
  string dismissal_date = 6;
  string dismissal_ground = 7;
  int32 doc_number = 7;
  string doc_date = 8;
}
message UpdateDismissalOrderBodyResponse { DismissalOrderBody body = 1; }

message DeleteDismissalOrderBodyRequest { int64 id = 1; }
message DeleteDismissalOrderBodyResponse {}

service DismissalOrderService {
  rpc CreateDismissalOrderHeader(CreateDismissalOrderHeaderRequest) returns (CreateDismissalOrderHeaderResponse);
  rpc GetDismissalOrderHeader(GetDismissalOrderHeaderRequest) returns (GetDismissalOrderHeaderResponse);
  rpc ListDismissalOrderHeaders(ListDismissalOrderHeadersRequest) returns (ListDismissalOrderHeadersResponse);
  rpc UpdateDismissalOrderHeader(UpdateDismissalOrderHeaderRequest) returns (UpdateDismissalOrderHeaderResponse);
  rpc DeleteDismissalOrderHeader(DeleteDismissalOrderHeaderRequest) returns (DeleteDismissalOrderHeaderResponse);

  rpc CreateDismissalOrderBody(CreateDismissalOrderBodyRequest) returns (CreateDismissalOrderBodyResponse);
  rpc GetDismissalOrderBody(GetDismissalOrderBodyRequest) returns (GetDismissalOrderBodyResponse);
  rpc ListDismissalOrderBodies(ListDismissalOrderBodiesRequest) returns (ListDismissalOrderBodiesResponse);
  rpc UpdateDismissalOrderBody(UpdateDismissalOrderBodyRequest) returns (UpdateDismissalOrderBodyResponse);
  rpc DeleteDismissalOrderBody(DeleteDismissalOrderBodyRequest) returns (DeleteDismissalOrderBodyResponse);
}
